--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -27,3 +27,39 @@
   font-family: "Quicksand-Bold";
   src: url(../fonts/Quicksand-Bold.otf);
 }
+
+@font-face {
+  font-family: "icomoon";
+  src: url(../fonts/icomoon.eot?nrzqg2);
+  src: url(../fonts/icomoon.eot?nrzqg2#iefix) format("embedded-opentype"),
+    url(../fonts/icomoon.ttf?nrzqg2) format("truetype"),
+    url(../fonts/icomoon.woff?nrzqg2) format("woff"),
+    url(../fonts/icomoon.svg?nrzqg2#icomoon) format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+%icomoon,
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-cross:before {
+  content: "\ea0f";
+}
+.icon-checkmark:before {
+  content: "\ea10";
+}
