--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,3 +10,5 @@ $--tablet-width: 768px;
 
 $--swiper-breakpoint-tablet: 1000px;
 $--swiper-breakpoint-mobile: 540px;
+
+$--transition: 0.3s ease-in;
